testing/Sentinel/Tests/ShouldSucceed/Issue406.adl
CONTEXT Issue406a IN ENGLISH
   INTERFACE Foo : I[A]
   s :: A*B
ENDCONTEXT


