testing/Sentinel/Tests/ShouldFail/Issue1127.adl
CONTEXT Issue1127 IN ENGLISH
INCLUDE "Issue1127.xlsx"

name :: Concept * ConceptName [UNI]
name :: Relation * RelationName [UNI]

ENDCONTEXT